🔧 chore(gitignore): add .prettierignore to gitignore
- Include .prettierignore in .gitignore to prevent it from being tracked in the repository

📝 docs(apidocs): update API documentation for player create and update

- Change HTTP methods and descriptions for player creation and update
- Add markdown documentation for player_create and player_update

♻️ refactor(main.go): update swag generate command to include markdown

- Modify swag command to generate markdown documentation

♻️ refactor(players_handler): use markdown for descriptions and update HTTP method

- Replace inline descriptions with markdown references
- Change UpdatePlayer to use PATCH method instead of PUT
